--- a/index.html
+++ b/index.html
@@ -148,37 +148,33 @@
                                     <h3>Java</h3>
                                 </div>
                                 <div class="tab-content">
-                                    <h2>Familiar:</h2>
-                                </div>
-                                <div class="tab-content">
                                     <h3>Python</h3>
                                 </div>
+                            </div>
+			    <div class="tab-contents frameworks">
+				</br>
                                 <div class="tab-content">
-                                    <h3>C++</h3>
+                                    <h2>REST API</h2>
+                                </div>
+                                <div class="tab-content">
+                                    <h3>MVC</h3>
                                 </div>
                                 <div class="tab-content">
                                     <h3>Tensorflow/keras</h3>
                                 </div>
                                 <div class="tab-content">
-                                    <h3>HTML/CSS</h3>
+                                    <h3>CSS/HTML</h3>
                                 </div>
                                 <div class="tab-content">
-                                    <h3>Javascript</h3>
-                                </div>
-                                <div class="tab-content">
-                                    <h3>ReactJs</h3>
-                                </div>
-                            </div>
-                            
-                            <div class="tab-contents platform">
-                                <div class="tab-content">
-                                    <h3>Android Studio</h3>
-                                </div>
-                                <div class="tab-content">
-                                    <h3>Github</h3>
+                                    <h3>JavaFX</h3>
                                 </div>
                                 <div class="tab-content">
                                     <h3>Git</h3>
+                                </div>    
+			    </div>
+                            <div class="tab-contents platform">
+                                <div class="tab-content">
+                                    <h3>Android Studio</h3>
                                 </div>
                                 <div class="tab-content">
                                     <h3>Firebase/Firestore</h3>
@@ -189,12 +185,6 @@
                                 <div class="tab-content">
                                     <h3>Computer Science @ </h3>
                                     <p>National University of Singpore : 2018-Present</p>
-                                </div>
-                            </div>
-                            
-                            <div class="tab-contents experience" id="experience">
-                                <div class="tab-content">
-                                    <h3>No Current Experience :(</h3>
                                 </div>
                             </div>
                         </div>
