--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                         <div class="about-tabs">
                             <ul class="tabs py-4">
                                 <li class="tab" id="language-head" onclick="viewTab('languages','language-head')">Languages</li>
+                                <li class="tab" id="frame-head" onclick="viewTab('frameworks','frame-head')">Frameworks</li>
                                 <li class="tab" id="platform-head" onclick="viewTab('platform','platform-head')">Platforms</li>
                                 <li class="tab" id="edu-head" onclick="viewTab('education','edu-head')">Education</li>
-                                <!-- <li class="tab" id="exp-head" onclick="viewTab('experience','exp-head')">Experience</li> -->
                             </ul>
             
                             <div class="tab-contents languages py-1" id="languages">
