--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
                     <div class="col-lg-6 col-md-12 about-title">
                         <h2 class="text-uppercase pt-5">
                             <span></span>
-                            <span>Introducing</span>
-                            <span>Zeke</span>
+                            <span>A little about me</span>
                         </h2>
                         <div class="paragraph py-4 w-50%">
                             <p class="para py-1">
@@ -127,64 +126,62 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <!-- ============================ End About Area ============================ -->
             <!-- ============================ Start Skills Area ============================ -->
             <section class="skills-area">
                 <div class="container-fluid" data-aos="fade-right">
                     <div class="col-lg-12 skills">
-                        <div class="skill-title text-uppercase">
+                        <div class="skill-title text-uppercase title-label">
                             <h1>Skills</h1>
                         </div>
                         <div class="row">
                             <div class="flip-card col-lg-3 col-md-6 col-sm-12">
                                 <div class="flip-card-inner">
-                                  <div class="flip-card-front">
-                                    <img src="./img/skills/code-languages.jpg" alt="Languages">
-                                  </div>
+                                    <div class="flip-card-front">
+                                        <div class="card-title">
+                                            <h3>Programming Languages</h3>
+                                        </div>
+                                      </div>
                                   <div class="flip-card-back">
                                     <h3>Java<br>Python<br>C++</h3>
                                   </div>
-                                </div>
-                                <div class="label">
-                                    <h3>Languages</h3>
                                 </div>
                               </div>
                               <div class="flip-card col-lg-3 col-md-6 col-sm-12">
                                 <div class="flip-card-inner">
                                   <div class="flip-card-front">
-                                    <img src="./img/skills/frameworks.jpg" alt="Frameworks">
+                                    <div class="card-title">
+                                        <h3>Familiar Frameworks</h3>
+                                    </div>
                                   </div>
                                   <div class="flip-card-back">
                                         <h4>MVC<br>Tensorflow/keras<br>CSS/HTML<br>VueJS/VueX<br>JavaFX<br>Git</h4>
                                     </div>
                                 </div>
-                                <div class="label">
-                                    <h3>Frameworks</h3>
-                                </div>
                               </div>
                               <div class="flip-card col-lg-3 col-md-6 col-sm-12">
                                 <div class="flip-card-inner">
                                   <div class="flip-card-front">
-                                    <img src="./img/skills/platforms.jpg" alt="Platforms">
+                                    <div class="card-title">
+                                        <h3>Familiar Platforms</h3>
+                                    </div>
                                   </div>
                                   <div class="flip-card-back">
                                     <h4>Android Studio<br>Firebase/Firestore</h4>
                                   </div>
                                 </div>
-                                <div class="label">
-                                    <h3>Platforms</h3>
-                                </div>
                               </div>
                                 <div class="flip-card col-lg-3 col-md-6 col-sm-12">
                                     <div class="flip-card-inner">
                                     <div class="flip-card-front">
-                                        <img src="./img/skills/education.png" alt="Education">
+                                        <div class="card-title">
+                                            <h3>Education</h3>
+                                        </div>
                                     </div>
                                     <div class="flip-card-back">
                                         <h5>Computer Science @ <br> National University of Singapore : 2018-Present</h5>
                                     </div>
-                                    </div>
-                                    <div class="label">
-                                        <h3>Education</h3>
                                     </div>
                                 </div>
                         </div>
@@ -192,8 +189,6 @@
                 </div>
             </section>
             <!-- ============================ End Skills Area ============================ -->
-        </section>
-        <!-- ============================ End About Area ============================ -->
 
         <!-- ============================ Start Project Area ============================-->
         <section class="project-area" id="projects" data-aos="fade-right">
@@ -202,7 +197,44 @@
                     <h1 class="text-uppercase title-h1 title-label">Projects</h1>
                 </div>
                 <div class="row grid">
-                    <div class="col-lg-6 col-md-6 element-item latest java">
+                    <div class="col-lg-6 col-md-12 col-sm-12 element-item latest java">
+                        <div class="our-project">
+                            <div class="project-content">
+                                <div class="project-card">
+                                    <a class="project-img test-popup-link" href="./img/portfolio/ChairVisE.png">
+                                        <img src="./img/portfolio/ChairVisE2.png" alt="portfolio-1" class="img-fluid">
+                                    </a>
+                                    <div class="card-content py-4">
+                                        <h4>ChairVisE/Chairhub (private repository)</h4>
+                                        <h5><i class="website-i"></i><strong>Web Application</strong></h5>
+                                        <p>Brownfield project that generates visualizations. We integrated annotations for visualizations, social hub (ChiarVise) and notifications. 
+                                        </p>
+                                        <p><strong>Technologies Used :</strong> Vue.js/Vuex, &nbsp; Google App Engine as PaaS, &nbsp; Spring REST, &nbsp; Google Cloud SQL (MySQL 5.6)</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12 element-item java">
+                        <div class="our-project">
+                            <div class="project-content">
+                                <div class="project-card">
+                                    <a class="project-img test-popup-link" href="./img/portfolio/SPA.jpg">
+                                        <img src="./img/portfolio/SPA.jpg" alt="portfolio-2" class="img-fluid">
+                                    </a>
+                                    <div class="card-content py-4">
+                                        <h4>Static Program Analyzer (private repository)</h4>
+                                        <h5><i class="website-i"></i><strong>C++ Executable</strong></h5>
+                                        <p>SPA performs lexical and semantic analysis on the given source program and returns meaningful query results to the user.
+                                        </p>
+                                        <p><strong>Responsibility :</strong> Testing IC</p>
+                                        <p><strong>Technologies Used :</strong> C++, shell script(for testing)</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 element-item latest java">
                         <div class="our-project">
                             <div class="project-content">
                                 <div class="project-card">
@@ -228,7 +260,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 element-item java">
+                    <div class="col-lg-4 col-md-12 col-sm-12 element-item java">
                         <div class="our-project">
                             <div class="project-content">
                                 <div class="project-card">
@@ -254,7 +286,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 sm-md-12 element-item latest python">
+                    <div class="col-lg-4 col-md-12 sm-md-12 element-item latest python hidden collapse-project">
                         <div class="our-project">
                             <div class=" project-content">
                                 <div class="project-card">
@@ -279,7 +311,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-md-12 element-item python hidden collapse-project" id="refridgenator">
+                    <div class="col-lg-4 col-md-12 col-md-12 element-item python hidden collapse-project" id="refridgenator">
                         <div class="our-project">
                             <div class="project-content">
                                 <div class="project-card">
@@ -297,7 +329,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 element-item latest python hidden collapse-project" id="spaceInvaders">
+                    <div class="col-lg-4 col-md-12 col-sm-12 element-item latest python hidden collapse-project" id="spaceInvaders">
                         <div class="our-project">
                             <div class=" project-content">
                                 <div class="project-card">
