fixed spelling error

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                                     <div class="card-content py-4">
                                         <h4>ChairVisE/Chairhub (private repository)</h4>
                                         <h5><i class="website-i"></i><strong>Web Application</strong></h5>
-                                        <p>Brownfield project that generates visualizations. We integrated annotations for visualizations, social hub (ChiarVise) and notifications. 
+                                        <p>Brownfield project that generates visualizations. We integrated annotations for visualizations, social hub (ChairHub) and notifications. 
                                         </p>
                                         <p><strong>Technologies Used :</strong> Vue.js/Vuex, &nbsp; Google App Engine as PaaS, &nbsp; Spring REST, &nbsp; Google Cloud SQL (MySQL 5.6)</p>
                                         </div>
